--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <main id="container">
 			<section>
-		        <div id="calendar" class="calendarBox"></div>
+		        <div id="myDatePicker" class="calendarBox"></div>
 	    	</section>
         </main>
 
@@ -20,8 +20,8 @@
 			var year = date.getFullYear();
 			var month = date.getMonth();
 			
-		    var calendarFrom = new Calendar('calendar',month,year);
-		    calendarFrom.onPickedDate(function(day,month,year) {
+		    var datePicker = new JSDatePicker('myDatePicker',month,year);
+		    datePicker.onPickedDate(function(day,month,year) {
 					console.log('Picked day '+day+'/'+month+'/'+year);
 		    });	
 		</script>
