--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <main id="container">
 			<section>
-		        <div id="myDatePicker" class="jsDatePickerBox"></div>
+		        <div id="myDatePicker" class="jsDatePicker"></div>
 	    	</section>
         </main>
 
