fixed page title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="main.css" media="screen" />
         <script src='jsdatepicker.js'></script>
         <link rel="stylesheet" type="text/css" href="jsdatepicker.css" media="screen" />
-        <title>jsCalendar Example</title>
+        <title>jsdatepicker Example</title>
 	</head>
 	<body>
 
